Make footer wrap like the header, fix spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -244,3 +244,7 @@ article img {
 .stack-small h1 + .meta, .stack-small h2 + .meta, .stack-small h3 + .meta, .stack-small h4 + .meta, .stack-small h5 + .meta, .stack-small h6 + .meta {
   --space: 0.2rem;
 }
+
+.flex-spacer {
+  flex-grow: 1;
+}
